--- a/style.css
+++ b/style.css
@@ -5,6 +5,21 @@ h1,h4{
 h2,h5,h6,h3,p{
     font-family: 'Roboto', sans-serif;
 }
+/* manu */
+.header-manu ul{
+    text-align: right;
+    font-size: 25px;
+    font-weight: 600;
+}
+.header-manu ul li{
+    display: inline-block;
+    margin-left: 30px;
+    margin-right: 20px;
+}
+.header-manu ul li a{
+    text-decoration: none;
+    color: black;
+}
 
 /* profile section */
 
@@ -191,4 +206,28 @@ h2,h5,h6,h3,p{
 .chat-btn a{
     text-decoration: none;
     color: white;
+}
+
+/* contect-us */
+.contect-us{
+    text-align: center;
+}
+.contect-us h3{
+    font-size: 20px;
+    font-family: math;
+    font-weight: 400;
+}
+.contect-us h4{
+    margin-top: -15px;
+    margin-bottom: -7px;
+    font-size: 26px;
+    font-weight: 300;
+}
+.icon-section {
+    text-align: center;
+    font-size: 32px;
+}
+
+.icon-section img {
+    max-width: 20px;
 }
